// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`formValidation does not return reason error when no reasons are provided while fetching 1`] = `
Object {
  "name": "Please enter a name",
  "reasons": false,
}
`;

exports[`formValidation does not return reason error when no reasons are provided while saving 1`] = `
Object {
  "name": "Please enter a name",
  "reasons": false,
}
`;

exports[`formValidation returns proper object (errors) when required fields are not provided 1`] = `
Object {
  "name": "Please enter a name",
  "reasons": "You must have one or more reason categories in your Reason List in order to save.",
}
`;

exports[`formValidation returns proper object (errors) when wrong values are provided 1`] = `
Object {
  "name": "Please enter a name",
  "reasons": "You must have one or more reason categories in your Reason List in order to save.",
}
`;

exports[`formValidation returns proper object when required fields are provided 1`] = `
Object {
  "name": false,
  "reasons": false,
}
`;
